plugins {
    id 'java'
}

group 'com.synfron.reshaper.burp'
archivesBaseName = 'reshaper-for-burp'
version '2.3.3'

targetCompatibility = '21'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation (
            'junit:junit:4.13.2',
            'org.mockito:mockito-core:4.8.0'
    )

    implementation (
            'org.apache.httpcomponents:httpclient:4.5.13',
            'org.mozilla:rhino:1.7.14',
            'cat.inspiracio:rhino-js-engine:1.7.10',
            'commons-io:commons-io:2.11.0',
            'org.apache.commons:commons-lang3:3.12.0',
            'net.jodah:expiringmap:0.5.10',
            'com.miglayout:miglayout-swing:11.0',
            'com.jayway.jsonpath:json-path:2.7.0',
            'org.rypt:f8:1.1-RC1',
            'org.apache.commons:commons-csv:1.9.0',
            'com.alexandriasoftware.swing:jsplitbutton:1.3.1',
            files('libs/htmlchardet-1.0.2.1.jar'),
            'org.jsoup:jsoup:1.15.3',
            'com.fasterxml.jackson.core:jackson-databind:2.14.0',
            'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.0',
            'org.apache.commons:commons-text:1.10.0',
            'com.fasterxml.uuid:java-uuid-generator:5.0.0'
    )

    compileOnly (
            'org.projectlombok:lombok:1.18.30',
            'net.portswigger.burp.extensions:montoya-api:2023.10'
    )

    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

jar {
    from {
        duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
